src/objects/ints__Equifax_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>ints__Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Customer_Id__c</fullName>
        <label>Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Is_Live__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Live</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Security_Code__c</fullName>
        <label>Security Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Equifax Parameters</label>
</CustomObject>